--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -24,9 +24,10 @@ jobs:
         uses: actions/checkout@v2
         with:
           path: packages/nginx-rtmp
+      - name: Sanity check
+        run: ls packages/nginx-rtmp
       - name: Configure environment
         run: |
-          ls packages/nginx-rtmp
           ./scripts/setup-ubuntu.sh
           ./scripts/setup-android-sdk.sh
       - name: Build
