--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -24,6 +24,8 @@ jobs:
         uses: actions/checkout@v2
         with:
           path: packages/nginx-rtmp
+      - name: Install termux-apt-repo
+        run: python3 -m pip install termux-apt-repo
       - name: Configure environment
         run: |
           ./scripts/setup-ubuntu.sh
@@ -31,4 +33,11 @@ jobs:
       - name: Build
         run: |
           ./build-package.sh -I nginx-rtmp
-          ls debs
+      - name: Package
+        run: |
+          termux-apt-repo ./debs ./public
+      - name: Deploy
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./public
