--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -27,7 +27,7 @@ jobs:
           ./scripts/setup-android-sdk.sh
       - name: Build
         run: |
-          ./build-package.sh -I nginx-rtmp -a ${{ matrix.target_arch }}
+          ./build-package.sh -I -a ${{ matrix.target_arch }} nginx-rtmp
       - name: Upload artifact
         uses: actions/upload-artifact@v2
         with:
