--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -8,9 +8,12 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    container:
+        image: termux/package-builder
     strategy:
       matrix:
         target_arch: [aarch64, arm, i686, x86_64]
+    timeout-minutes: 30
     steps:
       - name: Clone repository
         uses: actions/checkout@v2
@@ -23,16 +26,17 @@ jobs:
           path: packages/nginx-rtmp
       - name: Configure environment
         run: |
-          ./scripts/setup-ubuntu.sh
           ./scripts/setup-android-sdk.sh
       - name: Build
+        env:
+          TERMUX_DEBUG: false
         run: |
           ./build-package.sh -I -a ${{ matrix.target_arch }} nginx-rtmp
       - name: Upload artifact
         uses: actions/upload-artifact@v2
         with:
           name: debs-${{ matrix.target_arch }}
-          path: debs
+          path: output/*.deb
 
   deploy:
     needs: build
